# HealthAssistant

./: README.md  config.json  credentials.yaml  generate_credentials.py  health_assistant.py  main.py  main_1.py  pyproject.toml  rebuild_vectorstore.py  serpapi_test.py  user_data_alice.json  user_data_bob.json  user_data_charlie.json  user_data_kevin.json  vector_store.py
data/chroma_db/add1dd4c-fa7a-405b-9afd-1e37c17fdb8f/: index_metadata.pickle
data/chroma_db/bb218705-ea57-4eb1-8bad-44dc5ffd477e/: index_metadata.pickle
