[project]
name = "health-assistant"
version = "0.1.0"
description = "RAG-based health assistant using Chroma vector store"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.18",
    "google-search-results>=2.4.2",
    "langchain>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "pypdf>=3.17.0",
    "python-dotenv>=1.0.0",
    "serpapi>=0.1.5",
]